--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <img src="inara-logo-transparent-white Kopie.png" alt="INARA" class="logo-img">
             </div>
             <div class="nav-links">
-                <a href="#vision" class="nav-link">Vision</a>
+                <a href="#vision" class="nav-link">EyeGlass</a>
                 <a href="#technology" class="nav-link">Technology</a>
-                <a href="#team" class="nav-link">Team</a>
+                <a href="#team" class="nav-link"> Join the Team</a>
                 <a href="#invest" class="nav-link">Invest</a>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <div class="footer-column">
                         <h4>Company</h4>
                         <a href="#vision">Our Vision</a>
-                        <a href="#team">Team</a>
+                       
                         <a href="#technology">Technology</a>
                     </div>
                     <div class="footer-column">
