--- a/index.html
+++ b/index.html
@@ -38,27 +38,19 @@
                 <div class="footer-links">
                     <div class="footer-column">
                         <h4>Company</h4>
-                        <a href="#vision">Our Vision</a>
-                       
+                        <a href="#vision">EyeGlass</a>
                         <a href="#technology">Technology</a>
+                        <a href="#team">Join the Team</a>
                     </div>
                     <div class="footer-column">
                         <h4>Investment</h4>
                         <a href="#invest">Investment Opportunity</a>
                         <a href="#roadmap">Roadmap</a>
-                        <a href="#financials">Financials</a>
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <a href="mailto:invest@inara.com">Investor Relations</a>
-                        <a href="mailto:info@inara.com">General Inquiries</a>
-                        <a href="#">Press Kit</a>
-                    </div>
-                    <div class="footer-column">
-                        <h4>Legal</h4>
+                        <a href="mailto:majdkaroun@icloud.com">Email </a>
                         <a href="#">Privacy Policy</a>
-                        <a href="#">Terms of Service</a>
-                        <a href="#">Investment Terms</a>
                     </div>
                 </div>
             </div>
