--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <a href="mailto:majdkaroun@icloud.com">Email </a>
+                        <a href="mailto:majd.karoun@icloud.com">Email </a>
                         <a href="#">Privacy Policy</a>
                     </div>
                 </div>
