--- a/index.html
+++ b/index.html
@@ -24,7 +24,177 @@
 
     <!-- Main Content Area -->
     <main class="main-content">
-        <!-- Your content goes here -->
+        <!-- Introduction Header -->
+        <section class="features" style="padding-top: 120px; padding-bottom: 2rem;">
+            <div class="section-header">
+                <h2 class="section-title">Introducing EyeGlass</h2>
+                <p class="section-subtitle">A breakthrough Augmented Reality technology that enables a completely new way of digital interaction</p>
+            </div>
+        </section>
+
+        <!-- Productivity Showcase -->
+        <section id="technology" class="features" style="padding-top: 2rem; background: var(--color-white);">
+            <div class="showcase-content">
+                <div class="showcase-text">
+                    <span class="showcase-label" style="color: var(--color-gray-600);">Productivity</span>
+                    <h2 class="showcase-title" style="color: var(--color-black);">Your Workspace, Reimagined</h2>
+                    <p class="showcase-description" style="color: var(--color-gray-600);">
+                        Transform how you work with interactive 3D interfaces that blend seamlessly into your physical environment. Access your calendar, manage tasks, and organize files in an immersive workspace that reduces mental load and enhances focus.
+                    </p>
+                    <ul class="showcase-features">
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Interactive 3D calendars and schedules</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Spatial file organization</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Gesture-based task management</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Reduced screen fatigue</li>
+                    </ul>
+                </div>
+                <div class="showcase-visual">
+                    <img src="screeanshot1.png" alt="EyeGlass Productivity Interface" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
+                </div>
+            </div>
+        </section>
+
+        <!-- Social Connection Showcase -->
+        <section class="showcase">
+            <div class="showcase-content">
+                <div class="showcase-visual">
+                    <img src="screenshot2.png" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
+                </div>
+                <div class="showcase-text">
+                    <span class="showcase-label">Connection</span>
+                    <h2 class="showcase-title">Bring People Together</h2>
+                    <p class="showcase-description">
+                        Experience a new dimension of social interaction. Share moments, play games, and connect with loved ones through immersive mixed reality experiences that feel natural and engaging.
+                    </p>
+                    <ul class="showcase-features">
+                        <li><span class="check-icon">✓</span> Gesture-activated video calls</li>
+                        <li><span class="check-icon">✓</span> Shared AR gaming experiences</li>
+                        <li><span class="check-icon">✓</span> Interactive learning environments</li>
+                        <li><span class="check-icon">✓</span> Real-time collaboration</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Family Experience Showcase -->
+        <section class="features" style="background: var(--color-white); padding-bottom: var(--spacing-xl);">
+            <div class="showcase-content" style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 4rem; align-items: center;">
+                <div class="showcase-text">
+                    <span class="showcase-label" style="color: var(--color-gray-600);">Experience</span>
+                    <h2 class="showcase-title" style="color: var(--color-black);">For Everyone</h2>
+                    <p class="showcase-description" style="color: var(--color-gray-600);">
+                        EyeGlass brings families and friends together through shared experiences. From classic board games to innovative mixed reality activities, create memories that bridge the digital and physical worlds.
+                    </p>
+                    <ul class="showcase-features">
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Multi-user AR experiences</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Family-friendly content</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Intuitive hand gesture controls</li>
+                        <li style="color: var(--color-black);"><span class="check-icon">✓</span> Safe and secure environment</li>
+                    </ul>
+                </div>
+                <div class="showcase-visual" style="display: flex; align-items: center; min-height: auto;">
+                    <img src="screenshot3.png" alt="EyeGlass Family Experience" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); display: block;">
+                </div>
+            </div>
+        </section>
+
+        <!-- AI Assistant Showcase -->
+        <section class="showcase">
+            <div class="showcase-content">
+                <div class="showcase-visual">
+                    <img src="screenshot4.png" alt="EyeGlass AI Assistant" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
+                </div>
+                <div class="showcase-text">
+                    <span class="showcase-label">Intelligence</span>
+                    <h2 class="showcase-title"> AI Companion</h2>
+                    <p class="showcase-description">
+                        An integrated AI assistant that understands your world through visual context. Get instant answers, real-time translations, and intelligent support that adapts to your needs throughout the day.
+                    </p>
+                    <ul class="showcase-features">
+                        <li><span class="check-icon">✓</span> Real-time visual context analysis</li>
+                        <li><span class="check-icon">✓</span> Instant question answering</li>
+                        <li><span class="check-icon">✓</span> Smart task assistance</li>
+                        <li><span class="check-icon">✓</span> ask about anything around you in real-space</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Vision Section -->
+        <section id="vision" class="features">
+            <div class="section-header">
+                <h2 class="section-title">Core Features</h2>
+                <p class="section-subtitle">Discover what makes EyeGlass a revolutionary AR experience</p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                            <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Seamless Integration</h3>
+                    <p class="feature-description">EyeGlass connects the physical with the digital world, allowing users to complete daily tasks in an immersive 3D environment.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+                            <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Productivity Reimagined</h3>
+                    <p class="feature-description">Office tools like folders, to-do lists, and calendars are displayed as interactive 3D objects in your physical environment, boosting productivity while reducing screen fatigue.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="9" cy="7" r="4"></circle>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Social Connection</h3>
+                    <p class="feature-description">Revolutionize how people communicate. Start video calls with simple hand gestures and share experiences like board games or table tennis in mixed reality.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <path d="M12 16v-4"></path>
+                            <path d="M12 8h.01"></path>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">AI Assistant</h3>
+                    <p class="feature-description">An integrated AI companion that answers questions in real-time and assists with various tasks through visual context analysis.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                            <circle cx="12" cy="12" r="3"></circle>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Lightweight Design</h3>
+                    <p class="feature-description">Designed to be as light as regular glasses, ensuring all-day comfort without compromising on advanced AR capabilities.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Investment CTA -->
+        <section id="invest" class="cta">
+            <div class="cta-content">
+                <h2 class="cta-title">Be Part of the Future</h2>
+                <p class="cta-subtitle">Join us in creating a technology that will redefine how we interact with the digital world.</p>
+                <div class="cta-buttons">
+                    <button class="btn-cta-primary" onclick="window.location.href='mailto:majd.karoun@icloud.com'">Investment Inquiry</button>
+                    <button class="btn-cta-secondary" onclick="window.location.href='mailto:majd.karoun@icloud.com'">Join the Team</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
