--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <!-- Navigation -->
     <nav class="nav" id="nav">
         <div class="nav-container">
-            <div class="nav-logo">
+            <div class="nav-logo" style="display: flex; align-items: center; gap: 1rem;">
                 <img src="inara-logo-transparent-white Kopie.png" alt="INARA" class="logo-img">
+                <span style="font-size: 3rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;">INARA</span>
             </div>
             <div class="nav-links">
                 <a href="#vision" class="nav-link">EyeGlass</a>
