--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <span style="font-size: 3rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;">INARA</span>
             </div>
             <div class="nav-links">
-                <a href="#vision" class="nav-link">EyeGlass</a>
-                <a href="#technology" class="nav-link">Technology</a>
-                <a href="#team" class="nav-link"> Join the Team</a>
-                <a href="#invest" class="nav-link">Invest</a>
+                <a href="#" class="nav-link" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;">EyeGlass</a>
+
+                <a href="mailto:majd.karoun@icloud.com" class="nav-link">Join the Team</a>
+                <a href="mailto:majd.karoun@icloud.com" class="nav-link">Invest</a>
             </div>
         </div>
     </nav>
@@ -28,7 +28,7 @@
         <!-- Introduction Header -->
         <section class="features" style="padding-top: 120px; padding-bottom: 2rem;">
             <div class="section-header">
-                <h2 class="section-title">Introducing EyeGlass</h2>
+                <h2 class="section-title">Introducing <span class="animate-eyeglass">EyeGlass</span></h2>
                 <p class="section-subtitle">A breakthrough Augmented Reality technology that enables a completely new way of digital interaction</p>
             </div>
         </section>
@@ -209,19 +209,14 @@
                 <div class="footer-links">
                     <div class="footer-column">
                         <h4>Company</h4>
-                        <a href="#vision">EyeGlass</a>
-                        <a href="#technology">Technology</a>
-                        <a href="#team">Join the Team</a>
+                        <a href="mailto:majd.karoun@icloud.com">Invest</a>
+                        <a href="mailto:majd.karoun@icloud.com">Join the Team</a>
                     </div>
-                    <div class="footer-column">
-                        <h4>Investment</h4>
-                        <a href="#invest">Investment Opportunity</a>
-                        <a href="#roadmap">Roadmap</a>
-                    </div>
+                   
                     <div class="footer-column">
                         <h4>Contact</h4>
-                        <a href="mailto:majd.karoun@icloud.com">Email </a>
-                        <a href="#">Privacy Policy</a>
+                        <a href="mailto:majd.karoun@icloud.com">Email</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
                     </div>
                 </div>
             </div>
