--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -58,7 +58,7 @@
         <p>We implement appropriate security measures to protect your personal information.</p>
         
         <h2>5. Your Rights</h2>
-        <p>You have the right to access, correct, or delete your personal information. If you would like to exercise any of these rights, please contact us at <a href="mailto:majd.karoun@icloud.com">majd.karoun@icloud.com</a>.</p>
+        <p>You have the right to access, correct, or delete your personal information. If you would like to exercise any of these rights, please contact us.</p>
         
         <h2>6. Changes to This Policy</h2>
         <p>We may update our Privacy Policy. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
