--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             </div>
             <div class="nav-links">
                 <a href="#" class="nav-link" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;">EyeGlass</a>
-
                 <a href="mailto:majd.karoun@icloud.com" class="nav-link">Join the Team</a>
                 <a href="mailto:majd.karoun@icloud.com" class="nav-link">Invest</a>
+            </div>
+            <div class="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </nav>
