--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Navigation -->
     <nav class="nav" id="nav">
         <div class="nav-container">
-            <div class="nav-logo" style="display: flex; align-items: center; gap: 1rem;">
-                <img src="inara-logo-transparent-white Kopie.png" alt="INARA" class="logo-img">
-                <span style="font-size: 3rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;">INARA</span>
+            <div class="nav-logo" style="display: flex; align-items: center; gap: 0.5rem;">
+                <img src="inara-logo-transparent-white Kopie.png" alt="INARA" class="logo-img" style="height: 40px; width: auto;">
+                <span style="font-size: 1.5rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;">INARA</span>
             </div>
             <div class="nav-links">
                 <a href="#" class="nav-link" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;">EyeGlass</a>
