--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
@@ -17,7 +20,7 @@
         <div class="nav-container">
             <div class="nav-logo" style="display: flex; align-items: center; gap: 0.5rem;">
                 <img src="inara-logo-transparent-white Kopie.png" alt="INARA" class="logo-img" style="height: 40px; width: auto;">
-                <span style="font-size: 1.5rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;">INARA</span>
+                <span style="font-size: 1.5rem; font-weight: 500; color: var(--color-black); letter-spacing: -0.02em;">INARA</span>
             </div>
             <div class="nav-links">
                 <a href="#" class="nav-link" onclick="window.scrollTo({top: 0, behavior: 'smooth'}); return false;">EyeGlass</a>
