funding cancelation timer

--- a/index.html
+++ b/index.html
@@ -202,6 +202,28 @@
             <div class="cta-content">
                 <h2 class="cta-title">Be Part of the Future</h2>
                 <p class="cta-subtitle">Join us in creating a technology that will redefine how we interact with the digital world.</p>
+                
+                <!-- Countdown Timer -->
+                <div class="countdown-container">
+                    <div class="countdown-label">Project Funding Canceled In:</div>
+                    <div class="countdown-timer">
+                        <div class="countdown-item">
+                            <div class="countdown-value" id="days">00</div>
+                            <div class="countdown-unit">Days</div>
+                        </div>
+                        <div class="countdown-separator">:</div>
+                        <div class="countdown-item">
+                            <div class="countdown-value" id="hours">00</div>
+                            <div class="countdown-unit">Hours</div>
+                        </div>
+                        <div class="countdown-separator">:</div>
+                        <div class="countdown-item">
+                            <div class="countdown-value" id="minutes">00</div>
+                            <div class="countdown-unit">Minutes</div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="cta-buttons">
                     <button class="btn-cta-primary" onclick="window.location.href='mailto:majd.karoun@icloud.com'">Investment Inquiry</button>
                     <button class="btn-cta-secondary" onclick="window.location.href='mailto:majd.karoun@icloud.com'">Join the Team</button>
