adam-touch icon

--- a/index.html
+++ b/index.html
@@ -162,13 +162,8 @@
                     <p class="feature-description">Office tools like folders, to-do lists, and calendars are displayed as interactive 3D objects in your physical environment, boosting productivity while reducing screen fatigue.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="9" cy="7" r="4"></circle>
-                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                        </svg>
+                    <div class="feature-icon" style="display: flex; align-items: center; justify-content: flex-start; height: 64px; filter: grayscale(100%); gap: 0.25rem;">
+                        <span style="font-size: 3.5rem; line-height: 1; display: inline-block;">👉</span><span style="font-size: 3.5rem; line-height: 1; display: inline-block;">🍑</span>
                     </div>
                     <h3 class="feature-title">Social Connection</h3>
                     <p class="feature-description">Revolutionize how people communicate. Start video calls with simple hand gestures and share experiences like board games or table tennis in mixed reality.</p>
