header motion fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Main Content Area -->
     <main class="main-content">
         <!-- Introduction Header -->
-        <section class="features" style="padding-top: 120px; padding-bottom: 2rem;">
+        <section class="features" style="padding-top: 2rem; padding-bottom: 2rem;">
             <div class="section-header">
                 <h2 class="section-title">Introducing <span class="animate-eyeglass">EyeGlass</span></h2>
                 <p class="section-subtitle">A breakthrough Augmented Reality technology that enables a completely new way of digital interaction</p>
