adams-touch icon color

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                     <p class="feature-description">Office tools like folders, to-do lists, and calendars are displayed as interactive 3D objects in your physical environment, boosting productivity while reducing screen fatigue.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon" style="display: flex; align-items: center; justify-content: flex-start; height: 64px; filter: grayscale(100%); gap: 0.25rem;">
-                        <span style="font-size: 3.5rem; line-height: 1; display: inline-block;">👉</span><span style="font-size: 3.5rem; line-height: 1; display: inline-block;">🍑</span>
+                    <div class="feature-icon" style="display: flex; align-items: center; justify-content: flex-start; filter: grayscale(100%);">
+                        <span style="font-size: 3rem; line-height: 1; display: inline-block; margin-right: 0.15rem;">👉</span><span style="font-size: 3rem; line-height: 1; display: inline-block;">🍑</span>
                     </div>
                     <h3 class="feature-title">Social Connection</h3>
                     <p class="feature-description">Revolutionize how people communicate. Start video calls with simple hand gestures and share experiences like board games or table tennis in mixed reality.</p>
