--- a/index.html
+++ b/index.html
@@ -162,8 +162,11 @@
                     <p class="feature-description">Office tools like folders, to-do lists, and calendars are displayed as interactive 3D objects in your physical environment, boosting productivity while reducing screen fatigue.</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon" style="display: flex; align-items: center; justify-content: flex-start; filter: grayscale(100%);">
-                        <span style="font-size: 3rem; line-height: 1; display: inline-block; margin-right: 0.15rem;">👉</span><span style="font-size: 3rem; line-height: 1; display: inline-block;">🍑</span>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polygon points="23 7 16 12 23 17 23 7"></polygon>
+                            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                        </svg>
                     </div>
                     <h3 class="feature-title">Social Connection</h3>
                     <p class="feature-description">Revolutionize how people communicate. Start video calls with simple hand gestures and share experiences like board games or table tennis in mixed reality.</p>
