--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="showcase">
             <div class="showcase-content">
                 <div class="showcase-visual">
-                    <img src="screenshot2.png" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
+                    <img src="screenshot2.JPEG" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
                 </div>
                 <div class="showcase-text">
                     <span class="showcase-label">Connection</span>
