--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
         <!-- Social Connection Showcase -->
         <section class="showcase">
             <div class="showcase-content">
-                <div class="showcase-visual">
-                    <img src="screenshot2.JPEG" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 24px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);">
+                <div style="width: 100%; margin: 2rem 0;">
+                    <div style="margin: 0 auto 2rem; max-width: 900px; text-align: center;">
+                        <img src="screenshot2.png" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 16px; box-shadow: 0 15px 30px -8px rgba(0, 0, 0, 0.2);">
+                    </div>
+                    <div style="margin: 0 auto; max-width: 900px; text-align: center;">
+                        <img src="screenshot2.JPEG" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 16px; box-shadow: 0 15px 30px -8px rgba(0, 0, 0, 0.2);">
+                    </div>
                 </div>
                 <div class="showcase-text">
                     <span class="showcase-label">Connection</span>
