--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <!-- Social Connection Showcase -->
         <section class="showcase">
             <div class="showcase-content">
-                <div style="width: 100%; margin: 1rem 0;">
-                    <div style="margin: 0 auto 0.5rem; max-width: 400px; text-align: center;">
-                        <img src="screenshot2.png" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.1);">
+                <div class="showcase-visual" style="width: 100%; display: flex; flex-direction: column; align-items: center; gap: 1.5rem;">
+                    <div style="width: 100%; max-width: 400px; text-align: center;">
+                        <img src="screenshot2.png" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 25px 50px -12px rgba(0, 0, 0, 0.25)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px -2px rgba(0, 0, 0, 0.1)'">
                     </div>
-                    <div style="margin: 0 auto; max-width: 400px; text-align: center;">
-                        <img src="screenshot2.JPEG" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.1);">
+                    <div style="width: 100%; max-width: 400px; text-align: center;">
+                        <img src="screenshot2.JPEG" alt="EyeGlass Social Features" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 25px 50px -12px rgba(0, 0, 0, 0.25)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 8px -2px rgba(0, 0, 0, 0.1)'">
                     </div>
                 </div>
                 <div class="showcase-text">
